force-app/main/default/objects/Knowledge__kav/fields/Additional_Resources__c.field-meta.xml
<CustomField>
    <fullName>Additional_Resources__c</fullName>
    <label>Additional Resources</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>