force-app/main/default/objects/Knowledge__kav/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>Allows users to search articles by key words that are associated to the article</description>
    <label>Keywords</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>