force-app/main/default/objects/Knowledge__kav/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <label>Knowledge</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>