force-app/main/default/objects/Knowledge__kav/fields/Knowledge_community_url__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_community_url__c</fullName>
    <formula>If(ISPICKVAL(Language, &apos;en_US&apos;),&quot;https://customersupport.ironmountain.com/s/article/&quot; + UrlName+&quot;?language=en_US&quot;,IF(ISPICKVAL(Language, &apos;fr_CA&apos;),&quot;https://customersupport.ironmountain.com/s/article/&quot; + UrlName+&quot;?language=fr_CA&quot;,IF(ISPICKVAL(Language, &apos;es_AR&apos;),&quot;https://customersupport.ironmountain.com/irmlatam/s/article/&quot; + UrlName + &quot;?language=es_AR&quot;,IF(ISPICKVAL(Language, &apos;es_CO&apos;),&quot;https://customersupport.ironmountain.com/irmlatam/s/article/&quot; + UrlName + &quot;?language=es_CO&quot;,IF(ISPICKVAL(Language, &apos;es_MX&apos;),&quot;https://customersupport.ironmountain.com/irmlatam/s/article/&quot; + UrlName + &quot;?language=es_MX&quot;,IF(ISPICKVAL(Language, &apos;es_PE&apos;),&quot;https://customersupport.ironmountain.com/irmlatam/s/article/&quot; + UrlName + &quot;?language=es_PE&quot;,IF(ISPICKVAL(Language, &apos;es_CL&apos;),&quot;https://customersupport.ironmountain.com/irmlatam/s/article/&quot; + UrlName + &quot;?language=es_CL&quot;,IF(ISPICKVAL(Language, &apos;pt_BR&apos;),&quot;https://customersupport.ironmountain.com/irmlatam/s/article/&quot; + UrlName + &quot;?language=pt_BR&quot;,IF(ISPICKVAL(Language, &apos;en_GB&apos;),&quot;https://customersupport.ironmountain.com/irmesa/s/article/&quot; + UrlName + &quot;?language=en_GB&quot;,IF(ISPICKVAL(Language, &apos;fr&apos;),&quot;https://customersupport.ironmountain.com/irmesa/s/article/&quot; + UrlName + &quot;?language=fr&quot;,IF(ISPICKVAL(Language, &apos;es&apos;),&quot;https://customersupport.ironmountain.com/irmesa/s/article/&quot; + UrlName + &quot;?language=es&quot;,IF(ISPICKVAL(Language, &apos;de&apos;),&quot;https://customersupport.ironmountain.com/irmesa/s/article/&quot; + UrlName + &quot;?language=de&quot;,IF(ISPICKVAL(Language, &apos;en_IN&apos;),&quot;https://customersupport.ironmountain.com/apac/s/article/&quot; + UrlName + &quot;?language=en_IN&quot;,IF(ISPICKVAL(Language, &apos;en_IE&apos;),&quot;https://customersupport.ironmountain.com/apac/s/article/&quot; + UrlName + &quot;?language=en_IE&quot;,IF(ISPICKVAL(Language, &apos;ko&apos;),&quot;https://customersupport.ironmountain.com/apac/s/article/&quot; + UrlName + &quot;?language=ko&quot;,IF(ISPICKVAL(Language, &apos;th&apos;),&quot;https://customersupport.ironmountain.com/apac/s/article/&quot; + UrlName + &quot;?language=th&quot;,IF(ISPICKVAL(Language, &apos;zh_TW&apos;),&quot;https://customersupport.ironmountain.com/apac/s/article/&quot; + UrlName + &quot;?language=zh_TW&quot;,IF(ISPICKVAL(Language, &apos;in&apos;),&quot;https://customersupport.ironmountain.com/apac/s/article/&quot; + UrlName + &quot;?language=in&quot;,IF(ISPICKVAL(Language, &apos;en_SG&apos;),&quot;https://customersupport.ironmountain.com/apac/s/article/&quot; + UrlName + &quot;?language=en_SG&quot;,IF(ISPICKVAL(Language,&apos;en_PH&apos;),&quot;https://customersupport.ironmountain.com/apac/s/article/&quot; + UrlName + &quot;?language=en_PH&quot;,IF(ISPICKVAL(Language, &apos;en_MY&apos;),&quot;https://customersupport.ironmountain.com/apac/s/article/&quot; + UrlName + &quot;?language=en_MY&quot;,null)))))))))))))))))))))</formula>
    <label>Knowledge Community url</label>
    <type>Text</type>
</CustomField>