force-app/main/default/objects/Knowledge__kav/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>