force-app/main/default/objects/Knowledge__kav/recordTypes/IRM_Customer_Community_FAQ.recordType-meta.xml
<RecordType>
    <fullName>IRM_Customer_Community_FAQ</fullName>
    <active>true</active>
    <description>This record type is for IRM customer community portal</description>
    <label>IRM Customer Community FAQ</label>
</RecordType>