force-app/main/default/objects/Knowledge__kav/recordTypes/NAS_Data_Management.recordType-meta.xml
<RecordType>
    <fullName>NAS_Data_Management</fullName>
    <active>true</active>
    <description>NAS data management category</description>
    <label>NAS Data Management</label>
</RecordType>