force-app/main/default/objects/Knowledge__kav/recordTypes/NAS_Informational.recordType-meta.xml
<RecordType>
    <fullName>NAS_Informational</fullName>
    <active>true</active>
    <description>For tip sheets and/or informational only articles</description>
    <label>NAS Informational</label>
</RecordType>