force-app/main/default/objects/Knowledge__kav/recordTypes/NAS_Knowledge.recordType-meta.xml
<RecordType>
    <fullName>NAS_Knowledge</fullName>
    <active>true</active>
    <description>Record Type for all Knowledge Articles</description>
    <label>NAS Knowledge</label>
</RecordType>