force-app/main/default/objects/Knowledge__kav/listViews/Articles_LatAm.listView-meta.xml
<ListView>
    <fullName>Articles_LatAm</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>LANGUAGE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>startsWith</operation>
        <value>IMLA,IMBR,IMAR,IMCL,IMCO,IMPE,IMME</value>
    </filters>
    <label>Articles LatAm</label>
</ListView>